trying to fix an issue with css code not showing in menu html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,16 +175,14 @@ h2 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #ffffff; 
+    color: rgb(255, 255, 255);
     background-color: #ff3030;
     padding: 60px;
     font-size: 80px;
-    border: 5px solid black; 
-    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
-    transition: transform 0.3s ease;
-    font-family: 'Pridi', sans-serif; 
+    border: 5px solid black;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);/ transition: transform 0.3s ease;
+    font-family: 'Pridi', sans-serif;
 }
-
 
 .coffee-overlay:hover {
     transform: translate(-50%, -50%) scale(1.1);
